[tool.poetry]
name = "langchain-agent"
version = "0.1.0"
description = "AI Agent with LangChain and LangSmith integration"
authors = ["Julio Díaz"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-mcp-adapters = "^0.1.7"
langsmith = "^0.1.17"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
search-web = "^0.1.6"
serpapi = "0.1.5"
gradio = "^4.13.0"
openai = "^1.14.0"
pinecone = "^6.0.2"
langgraph = "^0.4.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"